css/styles.css
/* main background image - coins */
html, body {
    /*min-height:100%;*/
    /*height: 100%;*/
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background: url("../img/coins-wallpaper-with-overlay.jpg")no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}


/* 2nd layer background - white with opacity*/
.bg {
    height: auto;
    /*background-color: rgba(255, 255, 255, 0.7);*/
    background-size: cover;
    /*border: 1px solid blue;*/
}


/* site header background - white stripe with opacity 0.9 */
header {
    background-color: rgba(255,255,255,0.7);
    /*border: 1px solid green;*/
    margin: 0.5% 0;
    padding: 1% 0;
}


.brand {
    text-align: center;
    background-color: #ffe0b7;
    border-top: 0.063em solid #ffd08a;
    border-bottom: 0.063em solid #ffd08a;
    padding: 0.2% 0;
}


.brand a {
    text-decoration: none;
    color: #7b0c00;
    font-family: 'Montserrat', sans-serif;
    font-size: 2.8em;
    word-spacing: 20px;
}


/* navigation links */
.navbar-default .navbar-nav>li>a {
    color: #7b0c00;
}


.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
    color: #7b0c00;
    background-color: #ffe0b7;
}


.navbar {
    margin-bottom: 0;
}


.content {
    /*border: 1px solid magenta;*/
    width: 100%;
    height: 100%;
}


.col-content {
    padding: 0;
}

.carousel {
    width: 100%;
    height:400px;
    margin: 0 auto;
    overflow: hidden;
    /*border: 1px solid black;*/
}






/* mobile phone */
@media only screen and (min-width: 0) and (max-width: 480px) {
    .carousel {
        height:170px;
    }
    .brand {
        font-size: 1.8em;
    }
}

/* tablet portrait */
@media only screen and (min-width: 481px) and (max-width: 768px) {
    .carousel {
        height: 230px;
    }
    .brand {
        font-size: 2.3em;
    }
}


/* tablet landscape */
@media only screen and (min-width: 769px) and (max-width: 1024px) {
    .carousel {
        height:360px;
    }
}


/* laptop */
@media only screen and (min-width: 1025px) and (max-width: 1600px) {
    .carousel {
        height:370px;
    }
}


/* desktop */
@media only screen and (min-width: 1601px) {
    .carousel {
        height:420px;
    }
}




footer {
    color: #7b0c00;
    font-family: 'Yantramanav', sans-serif;
    font-size: 0.8em;
    text-align: center;

}


.footer {
    background-color: white;
    border-top: 0.1875em solid #ffd08a;
    border-bottom: 0.1875em solid #ffd08a;
    padding: 0.5em 0 0.3125em 0;
}



.welcome {
    background-color: rgba(255, 255, 255, 0.7);
    padding: 2%;
}


article {
    font-family: 'Yantramanav', sans-serif;
    font-size: 1.1em;
    background-color: white;
    padding: 1.5em;
    text-align: center;
}


.title {
    color: #7b0c00;
    font-family: 'Yantramanav', sans-serif;
    font-size: 2em;
    font-weight: bold;
    margin: 0.5em 0;
}


.quote {
    color: black;
    font-family: 'Bad Script', cursive;
    font-weight: 300;
    font-size: 1em;
}


#article:first-letter {
    font-size: 150%;
    color: #7b0c00;
}


/* login modal */
#login-username,
#login-password {
    width: 300px;
}

